enhance(app): stopped momentum on mobile

--- a/src/app/components/frame/frame.component.scss
+++ b/src/app/components/frame/frame.component.scss
@@ -1,3 +1,3 @@
 .frame-container {
-  overflow: visible;
+  overflow: hidden;
 }
